--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
     <h1>Max</h1>
     <img src="max_image1.png" alt="Max">
     <img src="max_image2.png" alt="Max">
+    <h1>Kat</h1>
+    <h1>I Don't Have Her Img :<</h1>
 </body>
 </html>
