--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <img src="max_image1.png" alt="Max">
     <img src="max_image2.png" alt="Max">
     <h1>Kat</h1>
-    <h1>I Don't Have Her Img :<</h1>
+    <img src="kat_image1.png" alt="Kat">
 </body>
 </html>
