--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <h1>Kat</h1>
     <img src="kat_image1.png" alt="Kat">
+    <img src="kat_image2.png" alt="Kat">
     
     <h1>Max</h1>
     <img src="max_image1.png" alt="Max">
